デフォルトテーマを colors.main の設定に対応させた。
- トップページにダミー画像を設置。RWDの確認用に。
- for Issue #52

--- a/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
+++ b/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
@@ -27,6 +27,13 @@
 .contents dl{
 	margin-left:1em;
 }
+.contents video,
+.contents audio,
+.contents svg,
+.contents img{
+	max-width:100%;
+	max-height:100%;
+}
 a.icon:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('icon'); ?>');
 	margin-right:4px;
@@ -62,6 +69,9 @@ a span.pdf:after{
 .more_links a:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('icon'); ?>');
 	margin-right:4px;
+}
+.more_links ul{
+	padding:0;
 }
 .page_top a:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('up'); ?>');
