--- a/htdocs/_PX/themes/default/theme.files/css/layout.css
+++ b/htdocs/_PX/themes/default/theme.files/css/layout.css
@@ -12,11 +12,11 @@ body{
 	padding:0px 0px 0px 0px;
 	margin:0px 0px 0px 0px;
 	background-color:<?php print $colors['main']; ?>;
-	color:#fff;
+	color:<?php print $colors['text']; ?>;
 	-webkit-text-size-adjust: 100%;
 }
 a{
-	color:#fff;
+	color:<?php print $colors['link']; ?>;
 }
 
 .theme_outline{
@@ -35,7 +35,7 @@ header .theme_logo span,
 header .theme_logo a{
 	font-size:150%;
 	font-weight:bold;
-	color:#fff;
+	color:<?php print $colors['mainx']; ?>;
 	text-decoration: none;
 }
 header .theme_logo a:hover{
@@ -43,13 +43,13 @@ header .theme_logo a:hover{
 }
 header .theme_logo span:before,
 header .theme_logo a:before{
-	content:url('data:image/svg+xml;base64,<?php print base64_encode($obj_funcs->create_src_pxfw_logo_svg(array('color'=>'#fff'))); ?>');
+	content:url('data:image/svg+xml;base64,<?php print base64_encode($obj_funcs->create_src_pxfw_logo_svg(array('color'=>null))); ?>');
 	vertical-align: text-top;
 	margin-right:15px;
 }
 .theme_middle{
 	clear:both;
-	margin:1em 0;
+	margin:0 0 1em 0;
 }
 .theme_column1{
 	width:74%;
@@ -59,7 +59,6 @@ header .theme_logo a:before{
 	margin-bottom:1px;
 }
 .theme_column1 a{
-	color:<?php print $colors['main']; ?>;
 }
 .theme_column1-header{
 	padding:0.5em 2em;
@@ -68,19 +67,27 @@ header .theme_logo a:before{
 	padding:0.5em 2em;
 	background-color:<?php print t::color_hsb2hex($hsb['h'], 4, 100); ?>;
 }
+@media all and (max-width:620px){
+	.theme_column1-header{
+		padding:0.5em 1em;
+	}
+	.theme_column1-content{
+		padding:0.5em 1em;
+	}
+}
 
 .theme_column2{
 	width:24%;
 	float:right;
 }
 .theme_column2 nav{
-	background-color:<?php print t::color_hsb2hex($hsb['h'], 20, 97); ?>;
 }
 
 .theme_localnavi{
 }
 .theme_localnavi .theme_localnavi-parent{
-	background-color: #ddd;
+	font-size:80%;
+	text-align: center;
 }
 .theme_localnavi ul{
 	margin:0;
@@ -92,20 +99,26 @@ header .theme_logo a:before{
 	list-style-type:none;
 }
 .theme_localnavi a{
-	color:<?php print $colors['main']; ?>;
+	color:<?php print $colors['link']; ?>;
+	background-color:<?php print $colors['linkx']; ?>;
 	display:block;
 	padding:0.2em 0.5em 0.2em 1em;
-	margin:0;
-	border-bottom:1px solid <?php print $colors['main']; ?>;
+	margin:0 0 1px 0;
 	text-decoration:none;
 }
 .theme_localnavi a:hover{
-	color:<?php print $colors['main']; ?>;
+	color:<?php print $colors['link']; ?>;
 	text-decoration:underline;
 }
 .theme_localnavi ul ul li a{
 	padding-left:2em;
 	font-size:90%;
+}
+.theme_localnavi .theme_localnavi-parent a,
+.theme_localnavi .theme_localnavi-parent a:hover{
+	color: <?php print $colors['main']; ?>;
+	background-color: <?php print $colors['mainx']; ?>;
+	padding:0.2em 1em;
 }
 
 footer{
@@ -123,14 +136,18 @@ footer .theme_foot_menu ul li{
 	padding:0; margin:0;
 	list-style-type:none;
 }
-footer .theme_foot_menu ul li a{
+footer .theme_foot_close a,
+footer .theme_foot_menu a{
 	text-decoration:none;
+	color:<?php print $colors['white']; ?>;
 }
-footer .theme_foot_menu ul li a:hover{
+footer .theme_foot_close a:hover,
+footer .theme_foot_menu a:hover{
 	text-decoration:underline;
 }
-footer .theme_foot_menu ul li a:before{
-	content:url('<?php print $obj_funcs->create_src_link_icon_uri('icon'); ?>');
+footer .theme_foot_close a:before,
+footer .theme_foot_menu a:before{
+	content:url('<?php print $obj_funcs->create_src_link_icon_uri('icon', array('colors'=>array('link'=>$colors['mainx'],'linkx'=>$colors['main']))); ?>');
 	margin-right:4px;
 }
 footer .theme_foot_close{
@@ -142,20 +159,20 @@ footer .theme_foot_back2top{
 	margin:0.2em 0;
 	text-align: right;
 	background-color:<?php print $colors['main2']; ?>;
-	color:<?php print $colors['main2x']; ?>;
+	color:<?php print $colors['link']; ?>;
 }
 footer .theme_foot_back2top *{
-	color:<?php print $colors['main']; ?>;
+	color:<?php print $colors['link']; ?>;
 	text-decoration: none;
 }
 footer .breadcrumb{
 	padding:0.2em 1em;
 	margin:0.2em 0;
 	background-color:<?php print $colors['main2']; ?>;
-	color:<?php print $colors['main2x']; ?>;
+	color:<?php print $colors['link']; ?>;
 }
 footer .breadcrumb *{
-	color:<?php print $colors['main2x']; ?>;
+	color:<?php print $colors['link']; ?>;
 }
 
 @media all and (max-width:620px){
