--- a/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
+++ b/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
@@ -3,7 +3,6 @@
 	$obj_funcs = new $obj_funcs($this->px);
 
 	$colors = $obj_funcs->get_color_scheme();
-	$hsb = t::color_hex2hsb( $colors['main'] );
 ?>
 @charset "UTF-8";
 
@@ -15,14 +14,13 @@
 
 
 .contents h2{
-	background-color:<?php print $colors['main2']; ?>;
-	color:<?php print $colors['main2x']; ?>;
+	background-color:<?php print $colors['thin']; ?>;
+	color:<?php print $colors['black']; ?>;
 	padding:0.3em 1em;
 }
 .contents h3{
-	background-color:<?php print $colors['main3']; ?>;
-	color:<?php print $colors['main3x']; ?>;
-	border-bottom:1px solid <?php print $colors['main']; ?>;
+	color:#000;
+	border-bottom:2px solid <?php print $colors['main']; ?>;
 }
 .contents dl{
 	margin-left:1em;
@@ -81,6 +79,8 @@ a span.pdf:after{
 	margin-left:2em;
 	margin-right:2em;
 	border-radius:10px;
+	border-color: #bbb;
+	background-color: #fafafa;
 }
 
 .contents .thumb_list{}
