--- a/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
+++ b/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
@@ -14,12 +14,12 @@
 
 
 .contents h2{
-	background-color:<?php print $colors['thin']; ?>;
-	color:<?php print $colors['black']; ?>;
+	background-color: <?php print $colors['main']; ?>;
+	color: <?php print $colors['white']; ?>;
 	padding:0.3em 1em;
 }
 .contents h3{
-	color:#000;
+	color: #000;
 	border-bottom:2px solid <?php print $colors['main']; ?>;
 }
 .contents dl{
