--- a/htdocs/_PX/themes/default/theme.files/css/layout.css
+++ b/htdocs/_PX/themes/default/theme.files/css/layout.css
@@ -14,6 +14,11 @@ body{
 	color:#333;
 	-webkit-text-size-adjust: 100%;
 }
+@media all and (max-width:260px){
+	body{
+		word-break:break-all;
+	}
+}
 a{
 	color: <?php print $colors['link']; ?>;
 	text-decoration: underline;
