デフォルトテーマで、h2の中にリンクがある場合に背景色と同化して文字が読めなくなる不具合を修正。

--- a/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
+++ b/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
@@ -18,6 +18,9 @@
 	color: <?php print $colors['white']; ?>;
 	padding:0.3em 1em;
 }
+.contents h2 *{
+	color: <?php print $colors['white']; ?>;
+}
 .contents h3{
 	color: #000;
 	border-bottom:2px solid <?php print $colors['main']; ?>;
