--- a/htdocs/_PX/themes/sample/theme.files/css/layout.css
+++ b/htdocs/_PX/themes/sample/theme.files/css/layout.css
@@ -8,7 +8,7 @@ body{
 	font-size:small;
 	font-family:"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","Meiryo","メイリオ", sans-serif;
 }
-body .theme_outline{
+.theme_outline{
 	text-align:left;
 	max-width:850px;
 	width:auto;
@@ -21,14 +21,14 @@ body .theme_outline{
 /**
  * ヘッダー
  */
-body .theme_outline .theme_header{
+.theme_header{
 	padding:10px;
 	border-bottom:1px solid #dddddd;
 	margin-bottom:5px;
 }
-body .theme_outline .theme_header .logo{
+.theme_header .theme_header-logo{
 }
-body .theme_outline .theme_header .logo a{
+.theme_header .theme_header-logo a{
 	font-size:150%;
 	font-weight:bold;
 }
@@ -36,15 +36,14 @@ body .theme_outline .theme_header .logo a{
 /**
  * 中段
  */
-body .theme_outline .theme_middle{
+.theme_middle{
 	clear:both;
 }
-body .theme_outline .theme_middle .theme_column1{
+.theme_column1{
 	width:74%;
 	float:left;
 }
-
-body .theme_outline .theme_middle .theme_column2{
+.theme_column2{
 	width:24%;
 	float:right;
 }
@@ -52,16 +51,16 @@ body .theme_outline .theme_middle .theme_column2{
 /**
  * ローカルナビ
  */
-body .theme_outline .theme_middle .theme_localnavi{
+.theme_localnavi{
 	padding:10px;
 	background-color:#eeeeee;
 	border-radius:10px;
 }
-body .theme_outline .theme_middle .theme_localnavi ul{
+.theme_localnavi ul{
 	margin:5px 0;
 	padding:0;
 }
-body .theme_outline .theme_middle .theme_localnavi ul li{
+.theme_localnavi ul li{
 	list-style-type:none;
 	margin:5px 0;
 	padding:0 0 0 10px;
@@ -70,17 +69,22 @@ body .theme_outline .theme_middle .theme_localnavi ul li{
 /**
  * フッター
  */
-body .theme_outline .theme_footer{
+.theme_footer{
 	padding:10px;
 	clear:both;
 	border-top:1px solid #dddddd;
 	margin-top:5px;
+	text-align:center;
+}
+.theme_footer-page_top{
+	text-align:right;
 }
 
 /**
  * パンくず
  */
 .breadcrumb{
+	text-align:left;
 }
 .breadcrumb ul,
 .breadcrumb ul li{
@@ -91,3 +95,9 @@ body .theme_outline .theme_footer{
 	font-size: 85%;
 }
 
+/**
+ * カレントページ
+ */
+.current{
+	font-weight:bold;
+}
