--- a/htdocs/_PX/themes/simple/theme.files/css/layout.css
+++ b/htdocs/_PX/themes/simple/theme.files/css/layout.css
@@ -5,41 +5,46 @@ body{
 	padding:0px 0px 0px 0px;
 	margin:0px 0px 0px 0px;
 }
-body .theme_outline{
+.theme_outline{
 	text-align:left;
 	width:980px;
 	margin:0px auto;
 }
-body .theme_outline .theme_header{
+.theme_header{
 }
-body .theme_outline .theme_header .theme_logo{
+.theme_logo{
 }
-body .theme_outline .theme_header .theme_logo a{
+.theme_logo a{
 	font-size:150%;
 	font-weight:bold;
 }
 
-body .theme_outline .theme_middle{
+.theme_middle{
 	clear:both;
 }
-body .theme_outline .theme_middle .theme_column1{
+.theme_column1{
 	width:74%;
 	float:left;
 }
 
-body .theme_outline .theme_middle .theme_column2{
+.theme_column2{
 	width:24%;
 	float:right;
 }
 
-body .theme_outline .theme_footer{
+.theme_footer{
+	text-align:center;
 	clear:both;
+}
+.theme_footer-page_top{
+	text-align:right;
 }
 
 /**
  * パンくず
  */
 .breadcrumb{
+	text-align:left;
 }
 .breadcrumb ul,
 .breadcrumb ul li{
@@ -48,6 +53,13 @@ body .theme_outline .theme_footer{
 	margin:0px;
 	padding:0px;
 	font-size: 85%;
+}
+
+/**
+ * カレントページ
+ */
+.current{
+	font-weight:bold;
 }
 
 
