--- a/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
+++ b/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
@@ -68,18 +68,18 @@ a span.pdf:after{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('pdf'); ?>');
 	margin-left:4px;
 }
-.more_links a:before{
+.contents .more_links a:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('icon'); ?>');
 	margin-right:4px;
 }
-.more_links ul{
+.contents .more_links ul{
 	padding:0;
 }
 .page_top a:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('up'); ?>');
 	margin-right:4px;
 }
-.anchor_links{
+.contents .anchor_links{
 	margin-left:2em;
 	margin-right:2em;
 	border-radius:10px;
@@ -93,37 +93,37 @@ a span.pdf:after{
 
 .contents .thumb_list{}
 @media all and (max-width:620px){
-	.thumb_list ul li{
+	.contents .thumb_list ul li{
 		font-size:x-small;
 	}
-	.anchor_links{
+	.contents .anchor_links{
 		margin-left:1em;
 		margin-right:1em;
 	}
-	.cols {
+	.contents .cols {
 		margin-left:0;
 	}
-	.cols .cols-col{
+	.contents .cols .cols-col{
 		float:none;
 		width:auto !important;
 		margin:1em 0;
 	}
-	.cols .cols-pad{
+	.contents .cols .cols-pad{
 		margin-left:0;
 	}
 }
 
-table.form_elements{}
+.contents table.form_elements{}
 @media all and (max-width:500px){
-	table.form_elements{
+	.contents table.form_elements{
 		display:block;
 		width:auto;
 		border-bottom: 1px solid #999999;
 	}
-	table.form_elements tbody,
-	table.form_elements tbody tr,
-	table.form_elements tbody th,
-	table.form_elements tbody td{
+	.contents table.form_elements tbody,
+	.contents table.form_elements tbody tr,
+	.contents table.form_elements tbody th,
+	.contents table.form_elements tbody td{
 		display:block;
 		width:auto;
 		border-bottom-width: 0;
