--- a/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
+++ b/htdocs/_PX/themes/default/theme.files/css/modules_custom.css
@@ -36,35 +36,35 @@
 	max-width:100%;
 	max-height:100%;
 }
-a.icon:before{
+.contents a.icon:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('icon'); ?>');
 	margin-right:4px;
 }
-a.up:before{
+.contents a.up:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('up'); ?>');
 	margin-right:4px;
 }
-a.down:before{
+.contents a.down:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('down'); ?>');
 	margin-right:4px;
 }
-a.back:before{
+.contents a.back:before{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('back'); ?>');
 	margin-right:4px;
 }
-a span.blank:after{
+.contents a span.blank:after{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('blank'); ?>');
 	margin-left:4px;
 }
-a span.download:after{
+.contents a span.download:after{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('download'); ?>');
 	margin-left:4px;
 }
-a span.pdf:after{
+.contents a span.pdf:after{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('pdf'); ?>');
 	margin-left:4px;
 }
-a span.pdf:after{
+.contents a span.pdf:after{
 	content:url('<?php print $obj_funcs->create_src_link_icon_uri('pdf'); ?>');
 	margin-left:4px;
 }
